# test_task

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.hpp  main.cpp  test.cpp
